--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 
   <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/goulash.html">Goulash</a>
-
+    <ul>
+      <li><a href="./recipes/goulash.html">Goulash</a></li>
+      <li><a href="./recipes//spaghetti-meatballs.html">Spaghetti and Meatballs</a></li>
+    </ul>
+    
   </body>
 </html>
