--- a/recipes/goulash.html
+++ b/recipes/goulash.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>Goulash</h1>
-  <img src="../images/goulash.webp">
+  <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2F7611604e954256639d012019b1d8bf5c%2F167244393264621D04E60-36A5-4FDE-A72B-C8B7A7B083D0.jpeg&q=60&c=sc&orient=true&poi=auto&h=512" alt="bowl of goulash">
   
   <h2>Description</h2>
   <p>This meaty goulash recipe is easy to make on the stovetop but can also be done in a slow cooker. Inspired by Paula Deen's Bobby's Goulash.</p>
@@ -29,11 +29,11 @@
   
   <h2>Steps</h2>
   <ol>
-    <li>Heat olive oil in a large Dutch oven over medium-high heat. Add onion and cook 3 minutes, stirring often. Add ground beef and cook, breaking up the meat until it is evenly browned, about 5 minutes. Add garlic and cook 3 minutes, stirring often.</li>
+    <li><p>Heat olive oil in a large Dutch oven over medium-high heat. Add onion and cook 3 minutes, stirring often. Add ground beef and cook, breaking up the meat until it is evenly browned, about 5 minutes. Add garlic and cook 3 minutes, stirring often.</p></li>
 
-    <li>Stir in water, tomato sauce, diced tomatoes, soy sauce, Italian seasoning, seasoned salt, and bay leaves. Bring to a simmer, cover and cook 5 minutes, stirring halfway through.</li>
+    <li><p>Stir in water, tomato sauce, diced tomatoes, soy sauce, Italian seasoning, seasoned salt, and bay leaves. Bring to a simmer, cover and cook 5 minutes, stirring halfway through.</p></li>
 
-    <li>Stir in uncooked macaroni, cover, and simmer over medium heat until pasta is tender, 11 to 13 minutes, stirring occasionally. Remove from heat, discard bay leaves, and serve.</li>
+    <li><p>Stir in uncooked macaroni, cover, and simmer over medium heat until pasta is tender, 11 to 13 minutes, stirring occasionally. Remove from heat, discard bay leaves, and serve.</p></li>
 
   </ol>
 
