--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
       <li><a href="./recipes/goulash.html">Goulash</a></li>
       <li><a href="./recipes//spaghetti-meatballs.html">Spaghetti and Meatballs</a></li>
+      <li><a href="./recipes/tiramisu.html">Tiramisu</a></li>
     </ul>
     
   </body>
