--- a/recipes/goulash.html
+++ b/recipes/goulash.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Goulash</title>
+  <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-  <h1>Goulash</h1>
+  <h1 class="site-title">Odin Recipes</h1>
+  <h1 class="recipe-title">Goulash</h1>
   <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2F7611604e954256639d012019b1d8bf5c%2F167244393264621D04E60-36A5-4FDE-A72B-C8B7A7B083D0.jpeg&q=60&c=sc&orient=true&poi=auto&h=512" alt="bowl of goulash">
   
   <h2>Description</h2>
