--- a/recipes/tiramisu.html
+++ b/recipes/tiramisu.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Tiramisu</title>
+  <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
-  <h1>Tiramisu</h1>
+  <h1 class="site-title">Odin Recipes</h1>
+  <h1 class="recipe-title">Tiramisu</h1>
   <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9069095.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="piece of tiramisu on a plate">
 
   <h2>Description</h2>
