--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="site-title">Odin Recipes</h1>
     <ul>
-      <li><a href="./recipes/goulash.html">Goulash</a></li>
-      <li><a href="./recipes//spaghetti-meatballs.html">Spaghetti and Meatballs</a></li>
-      <li><a href="./recipes/tiramisu.html">Tiramisu</a></li>
+      <li class="recipe"><a href="./recipes/goulash.html">Goulash</a></li>
+      <li class="recipe"><a href="./recipes/spaghetti-meatballs.html">Spaghetti and Meatballs</a></li>
+      <li class="recipe"><a href="./recipes/tiramisu.html">Tiramisu</a></li>
     </ul>
     
   </body>
