--- a/recipes/spaghetti-meatballs.html
+++ b/recipes/spaghetti-meatballs.html
@@ -3,9 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Spaghetti and Meatballs</title>
+  <link rel="stylesheet" href="../style.css">
 </head>
+
 <body>
-  <h1>Spaghetti and Meatballs</h1>
+  <h1 class="site-title">Odin Recipes</h1>
+  <h1 class="recipe-title">Spaghetti and Meatballs</h1>
   <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8884227.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="plate of spaghetti and meatballs">
 
   <h2>Description</h2>
